# VAC

./: JUDGE_AND_GRAPHING_IMPLEMENTATION.md  README.md  implementation_plan.md.resolved  jury_evaluation_comprehensive_analysis.md  jury_evaluation_workflow_diagram.md  test_streaming_performance.js
backend/: .gitignore  API_Enhanced_Features.md  ARCHITECTURE.md  ENHANCED_EVALUATION_SUMMARY.md  FINAL_GUARDRAILS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LOGGING_STATUS.md  PREPROCESSING_GUIDE.md  README.md  README_Enhanced_RAG.md  STREAMING_OPTIMIZATIONS.md  TRAUMA_INFORMED_GUARDRAILS_GUIDE.md  api.py  debug_actual_evaluation.py  debug_concurrent_14.py  debug_fallback.py  debug_imports.py  debug_jury_call.py  debug_performance.py  debug_port_8002.py  env.example  evaluation_server.py  guardrails_demo.py  main.py  minimal_api.py  preprocess_data.py  pyproject.toml  requirements.txt  start_backend.sh  test_api_fallback.py  test_fallback_integration.py  test_fallback_standalone.py  test_huggingface_pipeline.py  test_jury.py  test_minimal.py  test_session_endpoints.py  test_trauma_informed_guardrails.py
backend/api/: routes.py
backend/config/: constants.py  guardrails_config.py  mongodb.py  oauth.py  settings.py
backend/core/: app.py
backend/crawl_results/: links_20250526_133954.txt
backend/data/: cleaned_data.json
backend/examples/: complete_optimization_workflow.py  enhanced_evaluation_demo.py  enhanced_rag_demo.py  iterative_prompt_optimization_demo.py  judge_and_graphing_demo.py  normalized_evaluation_demo.py  quick_demo.py  rag_evaluation_example.py  (+2 more)
(+110 files in other folders)
