[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain-chroma>=0.2.4",
    "langchain-core>=0.3.61",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "langsmith>=0.3.42",
    "requests>=2.32.3",
]
