[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.61",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "langsmith>=0.3.42",
    "requests>=2.32.3",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "langchain-mistralai>=0.2.10",
    "tqdm>=4.67.1",
    "git-filter-repo>=2.47.0",
    "rank-bm25>=0.2.2",
    "motor>=3.7.1",
    "pymongo>=4.13.0",
]

# Add this section to specify which directories are packages
[tool.setuptools.packages.find]
include = ["api*", "core*", "config*", "models*", "services*", "utils*"]
exclude = ["data*", "images*", "shell_scripts*", "chroma_db*", "scripts*", "tests*", "examples*"]
